; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_file.c_test_Mapfile_createtemp.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_file.c_test_Mapfile_createtemp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@filename = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_NORMAL = common dso_local global i32 0, align 4
@GENERIC_READ = common dso_local global i32 0, align 4
@GENERIC_WRITE = common dso_local global i32 0, align 4
@CREATE_ALWAYS = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*)* @test_Mapfile_createtemp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_Mapfile_createtemp(i64* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64*, align 8
  store i64* %0, i64** %3, align 8
  %4 = load i32, i32* @filename, align 4
  %5 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %6 = call i32 @SetFileAttributesA(i32 %4, i32 %5)
  %7 = load i32, i32* @filename, align 4
  %8 = call i32 @DeleteFileA(i32 %7)
  %9 = load i32, i32* @filename, align 4
  %10 = load i32, i32* @GENERIC_READ, align 4
  %11 = load i32, i32* @GENERIC_WRITE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @CREATE_ALWAYS, align 4
  %14 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %15 = call i64 @CreateFileA(i32 %9, i32 %12, i32 0, i32 0, i32 %13, i32 %14, i32* null)
  %16 = load i64*, i64** %3, align 8
  store i64 %15, i64* %16, align 8
  %17 = load i64*, i64** %3, align 8
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %23

22:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %21
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @SetFileAttributesA(i32, i32) #1

declare dso_local i32 @DeleteFileA(i32) #1

declare dso_local i64 @CreateFileA(i32, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
